--- a/casaConectada/nbproject/project.properties
+++ b/casaConectada/nbproject/project.properties
@@ -65,7 +65,9 @@ javac.classpath=\
     ${file.reference.twitter4j-core-4.0.4.jar}:\
     ${file.reference.twitter4j-examples-4.0.4.jar}:\
     ${file.reference.twitter4j-media-support-4.0.4.jar}:\
-    ${file.reference.twitter4j-stream-4.0.4.jar}
+    ${file.reference.twitter4j-stream-4.0.4.jar}:\
+    ${libs.PostgreSQLDriver.classpath}:\
+    ${libs.jstl.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
