sistema migrado para ubuntu 16.04

--- a/casaConectada/nbproject/private/private.properties
+++ b/casaConectada/nbproject/private/private.properties
@@ -1,7 +1,8 @@
-deploy.ant.properties.file=C:\\Users\\RuWindows\\AppData\\Roaming\\NetBeans\\8.0\\tomcat60.properties
-j2ee.server.home=E:/Arquivos/Utilit\u00e1rios/uteis/apache-tomcat-6.0.43
-j2ee.server.instance=tomcat60:home=E:\\Arquivos\\Utilit\u00e1rios\\uteis\\apache-tomcat-6.0.43
+deploy.ant.properties.file=/home/trnsformers/.netbeans/8.2/tomcat70.properties
+j2ee.server.domain=/var/lib/tomcat7
+j2ee.server.home=/home/trnsformers/tomcat/apache-tomcat-7.0.78
+j2ee.server.instance=tomcat70:home=/home/trnsformers/tomcat/apache-tomcat-7.0.78
 javac.debug=true
 javadoc.preview=true
 selected.browser=default
-user.properties.file=C:\\Users\\RuWindows\\AppData\\Roaming\\NetBeans\\8.0\\build.properties
+user.properties.file=/home/trnsformers/.netbeans/8.2/build.properties
