--- a/casaConectada/nbproject/project.properties
+++ b/casaConectada/nbproject/project.properties
@@ -27,30 +27,31 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
 endorsed.classpath=
 excludes=
-file.reference.commons-codec-1.9.jar=C:\\Users\\RuWindows\\Desktop\\Client Apache\\httpcomponents-client-4.5.3\\lib\\commons-codec-1.9.jar
-file.reference.commons-logging-1.2.jar=C:\\Users\\RuWindows\\Desktop\\Client Apache\\httpcomponents-client-4.5.3\\lib\\commons-logging-1.2.jar
-file.reference.fluent-hc-4.5.3.jar=C:\\Users\\RuWindows\\Desktop\\Client Apache\\httpcomponents-client-4.5.3\\lib\\fluent-hc-4.5.3.jar
-file.reference.httpclient-4.5.3.jar=C:\\Users\\RuWindows\\Desktop\\Client Apache\\httpcomponents-client-4.5.3\\lib\\httpclient-4.5.3.jar
-file.reference.httpclient-cache-4.5.3.jar=C:\\Users\\RuWindows\\Desktop\\Client Apache\\httpcomponents-client-4.5.3\\lib\\httpclient-cache-4.5.3.jar
-file.reference.httpclient-win-4.5.3.jar=C:\\Users\\RuWindows\\Desktop\\Client Apache\\httpcomponents-client-4.5.3\\lib\\httpclient-win-4.5.3.jar
-file.reference.httpcore-4.4.6.jar=C:\\Users\\RuWindows\\Desktop\\Client Apache\\httpcomponents-client-4.5.3\\lib\\httpcore-4.4.6.jar
-file.reference.httpmime-4.5.3.jar=C:\\Users\\RuWindows\\Desktop\\Client Apache\\httpcomponents-client-4.5.3\\lib\\httpmime-4.5.3.jar
-file.reference.jna-4.1.0.jar=C:\\Users\\RuWindows\\Desktop\\Client Apache\\httpcomponents-client-4.5.3\\lib\\jna-4.1.0.jar
-file.reference.jna-platform-4.1.0.jar=C:\\Users\\RuWindows\\Desktop\\Client Apache\\httpcomponents-client-4.5.3\\lib\\jna-platform-4.1.0.jar
-file.reference.twitter4j-async-4.0.4.jar=C:\\Users\\RuWindows\\Desktop\\Sistema Agua p Layla\\lib\\twitter4j-async-4.0.4.jar
-file.reference.twitter4j-core-4.0.4.jar=C:\\Users\\RuWindows\\Desktop\\Sistema Agua p Layla\\lib\\twitter4j-core-4.0.4.jar
-file.reference.twitter4j-examples-4.0.4.jar=C:\\Users\\RuWindows\\Desktop\\Sistema Agua p Layla\\lib\\twitter4j-examples-4.0.4.jar
-file.reference.twitter4j-media-support-4.0.4.jar=C:\\Users\\RuWindows\\Desktop\\Sistema Agua p Layla\\lib\\twitter4j-media-support-4.0.4.jar
-file.reference.twitter4j-stream-4.0.4.jar=C:\\Users\\RuWindows\\Desktop\\Sistema Agua p Layla\\lib\\twitter4j-stream-4.0.4.jar
+file.reference.commons-codec-1.9.jar=/home/trnsformers/Api/httpcomponents-client-4.5.3/lib/commons-codec-1.9.jar
+file.reference.commons-logging-1.2.jar=/home/trnsformers/Api/httpcomponents-client-4.5.3/lib/commons-logging-1.2.jar
+file.reference.fluent-hc-4.5.3.jar=/home/trnsformers/Api/httpcomponents-client-4.5.3/lib/fluent-hc-4.5.3.jar
+file.reference.httpclient-4.5.3.jar=/home/trnsformers/Api/httpcomponents-client-4.5.3/lib/httpclient-4.5.3.jar
+file.reference.httpclient-cache-4.5.3.jar=/home/trnsformers/Api/httpcomponents-client-4.5.3/lib/httpclient-cache-4.5.3.jar
+file.reference.httpclient-win-4.5.3.jar=/home/trnsformers/Api/httpcomponents-client-4.5.3/lib/httpclient-win-4.5.3.jar
+file.reference.httpcore-4.4.6.jar=/home/trnsformers/Api/httpcomponents-client-4.5.3/lib/httpcore-4.4.6.jar
+file.reference.httpmime-4.5.3.jar=/home/trnsformers/Api/httpcomponents-client-4.5.3/lib/httpmime-4.5.3.jar
+file.reference.jna-4.1.0.jar=/home/trnsformers/Api/httpcomponents-client-4.5.3/lib/jna-4.1.0.jar
+file.reference.twitter4j-async-4.0.4.jar=/home/trnsformers/Api/Twitter/lib/twitter4j-async-4.0.4.jar
+file.reference.twitter4j-core-4.0.4.jar=/home/trnsformers/Api/Twitter/lib/twitter4j-core-4.0.4.jar
+file.reference.twitter4j-examples-4.0.4.jar=/home/trnsformers/Api/Twitter/lib/twitter4j-examples-4.0.4.jar
+file.reference.twitter4j-media-support-4.0.4.jar=/home/trnsformers/Api/Twitter/lib/twitter4j-media-support-4.0.4.jar
+file.reference.twitter4j-stream-4.0.4.jar=/home/trnsformers/Api/Twitter/lib/twitter4j-stream-4.0.4.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
 j2ee.deploy.on.save=true
 j2ee.platform=1.5
-j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.server.home}/lib/catalina-ant.jar:${j2ee.server.home}/lib/catalina-ha.jar:${j2ee.server.home}/lib/catalina-tribes.jar:${j2ee.server.home}/lib/catalina.jar:${j2ee.server.home}/lib/ecj-4.3.1.jar:${j2ee.server.home}/lib/el-api.jar:${j2ee.server.home}/lib/jasper-el.jar:${j2ee.server.home}/lib/jasper.jar:${j2ee.server.home}/lib/jsp-api.jar:${j2ee.server.home}/lib/servlet-api.jar:${j2ee.server.home}/lib/tomcat-coyote.jar:${j2ee.server.home}/lib/tomcat-dbcp.jar:${j2ee.server.home}/lib/tomcat-i18n-es.jar:${j2ee.server.home}/lib/tomcat-i18n-fr.jar:${j2ee.server.home}/lib/tomcat-i18n-ja.jar:${j2ee.server.home}/bin/tomcat-juli.jar
+j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.server.home}/lib/catalina-ant.jar:${j2ee.server.home}/lib/catalina-ha.jar:${j2ee.server.home}/lib/catalina-tribes.jar:${j2ee.server.home}/lib/catalina.jar:${j2ee.server.home}/lib/ecj-4.4.2.jar:${j2ee.server.home}/lib/el-api.jar:${j2ee.server.home}/lib/jasper-el.jar:${j2ee.server.home}/lib/jasper.jar:${j2ee.server.home}/lib/jsp-api.jar:${j2ee.server.home}/lib/servlet-api.jar:${j2ee.server.home}/lib/tomcat-api.jar:${j2ee.server.home}/lib/tomcat-coyote.jar:${j2ee.server.home}/lib/tomcat-dbcp.jar:${j2ee.server.home}/lib/tomcat-i18n-es.jar:${j2ee.server.home}/lib/tomcat-i18n-fr.jar:${j2ee.server.home}/lib/tomcat-i18n-ja.jar:${j2ee.server.home}/lib/tomcat-jdbc.jar:${j2ee.server.home}/lib/tomcat-util.jar:${j2ee.server.home}/lib/tomcat7-websocket.jar:${j2ee.server.home}/lib/websocket-api.jar
 j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
+    ${libs.PostgreSQLDriver.classpath}:\
+    ${libs.jstl.classpath}:\
     ${file.reference.commons-codec-1.9.jar}:\
     ${file.reference.commons-logging-1.2.jar}:\
     ${file.reference.fluent-hc-4.5.3.jar}:\
@@ -60,22 +61,19 @@ javac.classpath=\
     ${file.reference.httpcore-4.4.6.jar}:\
     ${file.reference.httpmime-4.5.3.jar}:\
     ${file.reference.jna-4.1.0.jar}:\
-    ${file.reference.jna-platform-4.1.0.jar}:\
     ${file.reference.twitter4j-async-4.0.4.jar}:\
     ${file.reference.twitter4j-core-4.0.4.jar}:\
     ${file.reference.twitter4j-examples-4.0.4.jar}:\
     ${file.reference.twitter4j-media-support-4.0.4.jar}:\
-    ${file.reference.twitter4j-stream-4.0.4.jar}:\
-    ${libs.PostgreSQLDriver.classpath}:\
-    ${libs.jstl.classpath}
+    ${file.reference.twitter4j-stream-4.0.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
 javac.deprecation=false
 javac.processorpath=\
     ${javac.classpath}
-javac.source=1.5
-javac.target=1.5
+javac.source=1.6
+javac.target=1.6
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
