--- a/casaConectada/nbproject/project.properties
+++ b/casaConectada/nbproject/project.properties
@@ -27,15 +27,16 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
 endorsed.classpath=
 excludes=
-file.reference.commons-codec-1.9.jar=/home/trnsformers/Api/httpcomponents-client-4.5.3/lib/commons-codec-1.9.jar
-file.reference.commons-logging-1.2.jar=/home/trnsformers/Api/httpcomponents-client-4.5.3/lib/commons-logging-1.2.jar
-file.reference.fluent-hc-4.5.3.jar=/home/trnsformers/Api/httpcomponents-client-4.5.3/lib/fluent-hc-4.5.3.jar
-file.reference.httpclient-4.5.3.jar=/home/trnsformers/Api/httpcomponents-client-4.5.3/lib/httpclient-4.5.3.jar
-file.reference.httpclient-cache-4.5.3.jar=/home/trnsformers/Api/httpcomponents-client-4.5.3/lib/httpclient-cache-4.5.3.jar
-file.reference.httpclient-win-4.5.3.jar=/home/trnsformers/Api/httpcomponents-client-4.5.3/lib/httpclient-win-4.5.3.jar
-file.reference.httpcore-4.4.6.jar=/home/trnsformers/Api/httpcomponents-client-4.5.3/lib/httpcore-4.4.6.jar
-file.reference.httpmime-4.5.3.jar=/home/trnsformers/Api/httpcomponents-client-4.5.3/lib/httpmime-4.5.3.jar
-file.reference.jna-4.1.0.jar=/home/trnsformers/Api/httpcomponents-client-4.5.3/lib/jna-4.1.0.jar
+file.reference.commons-codec-1.9.jar=/home/trnsformers/Api/http/httpcomponents-client-4.5.3/lib/commons-codec-1.9.jar
+file.reference.commons-logging-1.2.jar=/home/trnsformers/Api/http/httpcomponents-client-4.5.3/lib/commons-logging-1.2.jar
+file.reference.fluent-hc-4.5.3.jar=/home/trnsformers/Api/http/httpcomponents-client-4.5.3/lib/fluent-hc-4.5.3.jar
+file.reference.httpclient-4.5.3.jar=/home/trnsformers/Api/http/httpcomponents-client-4.5.3/lib/httpclient-4.5.3.jar
+file.reference.httpclient-cache-4.5.3.jar=/home/trnsformers/Api/http/httpcomponents-client-4.5.3/lib/httpclient-cache-4.5.3.jar
+file.reference.httpclient-win-4.5.3.jar=/home/trnsformers/Api/http/httpcomponents-client-4.5.3/lib/httpclient-win-4.5.3.jar
+file.reference.httpcore-4.4.6.jar=/home/trnsformers/Api/http/httpcomponents-client-4.5.3/lib/httpcore-4.4.6.jar
+file.reference.httpmime-4.5.3.jar=/home/trnsformers/Api/http/httpcomponents-client-4.5.3/lib/httpmime-4.5.3.jar
+file.reference.jna-4.1.0.jar=/home/trnsformers/Api/http/httpcomponents-client-4.5.3/lib/jna-4.1.0.jar
+file.reference.jna-platform-4.1.0.jar=/home/trnsformers/Api/http/httpcomponents-client-4.5.3/lib/jna-platform-4.1.0.jar
 file.reference.twitter4j-async-4.0.4.jar=/home/trnsformers/Api/Twitter/lib/twitter4j-async-4.0.4.jar
 file.reference.twitter4j-core-4.0.4.jar=/home/trnsformers/Api/Twitter/lib/twitter4j-core-4.0.4.jar
 file.reference.twitter4j-examples-4.0.4.jar=/home/trnsformers/Api/Twitter/lib/twitter4j-examples-4.0.4.jar
@@ -52,6 +53,11 @@ jar.compress=false
 javac.classpath=\
     ${libs.PostgreSQLDriver.classpath}:\
     ${libs.jstl.classpath}:\
+    ${file.reference.twitter4j-async-4.0.4.jar}:\
+    ${file.reference.twitter4j-core-4.0.4.jar}:\
+    ${file.reference.twitter4j-examples-4.0.4.jar}:\
+    ${file.reference.twitter4j-media-support-4.0.4.jar}:\
+    ${file.reference.twitter4j-stream-4.0.4.jar}:\
     ${file.reference.commons-codec-1.9.jar}:\
     ${file.reference.commons-logging-1.2.jar}:\
     ${file.reference.fluent-hc-4.5.3.jar}:\
@@ -61,11 +67,7 @@ javac.classpath=\
     ${file.reference.httpcore-4.4.6.jar}:\
     ${file.reference.httpmime-4.5.3.jar}:\
     ${file.reference.jna-4.1.0.jar}:\
-    ${file.reference.twitter4j-async-4.0.4.jar}:\
-    ${file.reference.twitter4j-core-4.0.4.jar}:\
-    ${file.reference.twitter4j-examples-4.0.4.jar}:\
-    ${file.reference.twitter4j-media-support-4.0.4.jar}:\
-    ${file.reference.twitter4j-stream-4.0.4.jar}
+    ${file.reference.jna-platform-4.1.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
