--- a/casaConectada/nbproject/project.properties
+++ b/casaConectada/nbproject/project.properties
@@ -51,8 +51,6 @@ j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.serve
 j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
-    ${libs.PostgreSQLDriver.classpath}:\
-    ${libs.jstl.classpath}:\
     ${file.reference.twitter4j-async-4.0.4.jar}:\
     ${file.reference.twitter4j-core-4.0.4.jar}:\
     ${file.reference.twitter4j-examples-4.0.4.jar}:\
@@ -67,7 +65,8 @@ javac.classpath=\
     ${file.reference.httpcore-4.4.6.jar}:\
     ${file.reference.httpmime-4.5.3.jar}:\
     ${file.reference.jna-4.1.0.jar}:\
-    ${file.reference.jna-platform-4.1.0.jar}
+    ${file.reference.jna-platform-4.1.0.jar}:\
+    ${libs.PostgreSQLDriver.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
