--- a/casaConectada/nbproject/project.properties
+++ b/casaConectada/nbproject/project.properties
@@ -66,7 +66,7 @@ javac.classpath=\
     ${file.reference.httpmime-4.5.3.jar}:\
     ${file.reference.jna-4.1.0.jar}:\
     ${file.reference.jna-platform-4.1.0.jar}:\
-    ${libs.PostgreSQLDriver.classpath}
+    ${libs.jstl.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
