pesquisando erro de conexão

--- a/casaConectada/nbproject/project.properties
+++ b/casaConectada/nbproject/project.properties
@@ -37,6 +37,7 @@ file.reference.httpcore-4.4.6.jar=/home/trnsformers/Api/http/httpcomponents-clie
 file.reference.httpmime-4.5.3.jar=/home/trnsformers/Api/http/httpcomponents-client-4.5.3/lib/httpmime-4.5.3.jar
 file.reference.jna-4.1.0.jar=/home/trnsformers/Api/http/httpcomponents-client-4.5.3/lib/jna-4.1.0.jar
 file.reference.jna-platform-4.1.0.jar=/home/trnsformers/Api/http/httpcomponents-client-4.5.3/lib/jna-platform-4.1.0.jar
+file.reference.postgresql-42.1.1.jre6.jar=/home/trnsformers/Api/postgres/postgresql-42.1.1.jre6.jar
 file.reference.twitter4j-async-4.0.4.jar=/home/trnsformers/Api/Twitter/lib/twitter4j-async-4.0.4.jar
 file.reference.twitter4j-core-4.0.4.jar=/home/trnsformers/Api/Twitter/lib/twitter4j-core-4.0.4.jar
 file.reference.twitter4j-examples-4.0.4.jar=/home/trnsformers/Api/Twitter/lib/twitter4j-examples-4.0.4.jar
@@ -67,7 +68,7 @@ javac.classpath=\
     ${file.reference.jna-4.1.0.jar}:\
     ${file.reference.jna-platform-4.1.0.jar}:\
     ${libs.jstl.classpath}:\
-    ${libs.PostgreSQLDriver.classpath}
+    ${file.reference.postgresql-42.1.1.jre6.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
